<resources>
    <string name="app_name">Dao Esbjerg Manager</string>
    <string name="title_activity_route_list_map">Route List / Map</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_carriers">Carriers</string>
    <string name="title_activity_problems_list">ProblemsListActivity</string>
    <string name="LoginText">DaoApp Esbjerg</string>
    <string name="LoginText1">Manager</string>
    <string name="GoogleMapsApi">AIzaSyDTEIxfNAJXeidAaxo8Y2WfP_3hwe_D_mI</string>
    <string name="routeP">Route Package</string>
    <string name="routeN">Route Number</string>
    <string name="city">City</string>
    <string name="addess">Address</string>
    <string name="queue">Queue:</string>
    <string name="addNewspaper">Add Newspaper</string>
    <string name="save">Save</string>
    <string name="carrierNumb">Carrier Number</string>
    <string name="name">Name</string>
    <string name="phoneNumb">Phone Number</string>
    <string name="emailA">Email Address</string>
    <string name="address">Address</string>
    <string name="newsp">Newspapers</string>
    <string name="seeOnMap">See on Map</string>
    <string name="phone">Phone</string>
    <string name="emial">Email</string>
    <string name="deleteC">Delete Carrier</string>
    <string name="editD">Edit Details</string>
    <string name="searchC">Search Carrier</string>
    <string name="allC">All Carriers</string>
    <string name="cToday">Carriers Today</string>
    <string name="pw">Password</string>
    <string name="login">Login</string>
    <string name="routeST">Route Status</string>
    <string name="routelm">Route List / Map</string>
    <string name="carriers">Carriers</string>
    <string name="problems">Problems</string>
    <string name="logout">Logout</string>
    <string name="dAreyouSure">Are you sure you want to remove</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dLogout">Are you sure you want to Logout</string>
    <string name="delivered">Delivered</string>
    <string name="back">Back</string>
    <string name="reasons">Reasons:</string>
    <string name="packageNumb">Package Number:</string>
    <string name="cName">Carrier name:</string>
    <string name="rName">Route number:</string>
    <string name="deletePa">Delete Package</string>
    <string name="finished">Finished</string>
    <string name="routes">Routes</string>
    <string name="scooterNumb">Scooter Number:</string>
    <string name="problemsSolved">Problems Solved</string>
    <string name="name_">Name:</string>
    <string name="package__">Package:</string>
    <string name="discharges">Discharges</string>
    <string name="failures">Failures</string>
    <string name="package_">Package</string>
    <string name="route">Route</string>
    <string name="changeP">ChangePosition</string>
    <string name="addNA">Add New Address</string>
    <string name="addNC">Add New Carrier</string>
    <string name="carrierD">Carrier Details</string>
    <string name="MM">Main Menu</string>
</resources>
