<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

    <RelativeLayout
        android:id="@+id/relLayout9"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/snippet_mainmenu_toolbar" />

    </RelativeLayout>
    </android.support.design.widget.AppBarLayout>

    <Button
        android:id="@+id/btn_RouterStatus"
        android:layout_width="330dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:text="@string/routeST"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar" />

    <Button
        android:id="@+id/btn_RouteListMap"
        android:layout_width="330dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:text="@string/routelm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_RouterStatus" />

    <Button
        android:id="@+id/btn_Carriers"
        android:layout_width="330dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:text="@string/carriers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_RouteListMap" />

    <Button
        android:id="@+id/btn_IssuesList"
        android:layout_width="330dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:text="@string/problems"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Carriers" />

    <Button
        android:id="@+id/btn_Logout"
        android:layout_width="330dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_IssuesList" />

</android.support.constraint.ConstraintLayout>