<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_popup_packageNumber"
        android:layout_width="140dp"
        android:layout_height="22dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_popup_packages_Name"
        android:layout_width="140dp"
        android:layout_height="29dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="84dp"
        android:textAlignment="center"
        android:textSize="26dp"
        app:layout_constraintBottom_toTopOf="@+id/lv_popup_packages_reasons"
        app:layout_constraintStart_toEndOf="@+id/textView5" />

    <TextView
        android:id="@+id/txt_popup_packages_Route"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:textAlignment="center"
        android:textSize="26dp"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/txt_popup_packages_Name" />

    <TextView
        android:layout_width="147dp"
        android:layout_height="33dp"
        android:layout_marginTop="20dp"
        android:text="@string/reasons"
        android:textAlignment="center"
        android:textSize="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_popup_packages_Route" />

    <ListView
        android:id="@+id/lv_popup_packages_reasons"
        android:layout_width="300dp"
        android:layout_height="153dp"
        android:layout_gravity="center"

        android:layout_marginTop="156dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ListView>

    <Switch
        android:id="@+id/s__package_delivered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Undelivered"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lv_popup_packages_reasons" />

    <Button
        android:id="@+id/btn_packagesDialog_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="8dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toEndOf="@+id/btn_delete_package"
        app:layout_constraintTop_toBottomOf="@+id/s__package_delivered"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="110dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/packageNumb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/cName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/rName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/btn_delete_package"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:text="@string/deletePa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s__package_delivered"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>