<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAddressActivity">
    <RelativeLayout
        android:id="@+id/relLayout9"
        android:layout_width="match_parent"
        android:layout_height="46dp">
        <include layout="@layout/snippet_addaddress_toolbar" />
    </RelativeLayout>

    <EditText
        android:id="@+id/txt_addRoutePackageNumber"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/routeP"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/ibtn_newRP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_id"
        android:layout_width="56dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_massege" />

    <EditText
        android:id="@+id/txt_addAddress"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/addess"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_addCity" />

    <EditText
        android:id="@+id/txt_massege"
        android:layout_width="350dp"
        android:layout_height="47dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="Messege"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_addAddress" />

    <EditText
        android:id="@+id/txt_addCity"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/city"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/ibtn_cityList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_addRouteNumber" />

    <EditText
        android:id="@+id/txt_addRouteNumber"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/routeN"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/ibtn_newR"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_addRoutePackageNumber" />

    <ListView
        android:id="@+id/lv_addNewspapers"
        android:layout_width="354dp"
        android:layout_height="121dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_id" />

    <Button
        android:id="@+id/btn_addNewspaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="44dp"
        android:text="@string/addNewspaper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lv_addNewspapers" />

    <Button
        android:id="@+id/btn_saveAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lv_addNewspapers" />

    <ImageButton
        android:id="@+id/ibtn_routepackageListAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_list" />

    <ImageButton
        android:id="@+id/ibtn_routeListAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_list" />

    <ImageButton
        android:id="@+id/ibtn_cityList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_list" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="16dp"
        android:text="@string/queue"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_massege" />

    <ImageButton
        android:id="@+id/ibtn_newRP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toStartOf="@+id/ibtn_routepackageListAdd"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_new" />

    <ImageButton
        android:id="@+id/ibtn_newR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toStartOf="@+id/ibtn_routeListAdd"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_new" />

</android.support.constraint.ConstraintLayout>